--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   width: 100vw;
-  height: 100%;
+  height: 10vh;
   text-align: center;
   background-color: #282c34; /* Color de fondo opcional */
   color: white; /* Color de texto opcional */
