--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 body {
   margin: 0;
   padding: 0;
   width: 100vw;
   height: 100vh;
   
-  background-color: rgba(204, 52, 52, 0.082); /* Color negro con alpha 0.7 */
+  /* Color negro con alpha 0.7 */
   color: black;
   font-weight: 500;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
